# bespoken

./: 404.html  Makefile  README.md  app.py  chat.py  demo.py  edit.py  index.html  mkdocs.yml  pyproject.toml  teacher.py  test_app_import.py  test_chat_class.py  test_keyboard_shortcut.py  test_mode_ui.py  test_streaming_padding.py  todo.markdown
.github/workflows/: test-optional-deps.yml  test.yml
api/prompts/: index.html
api/slash-commands/: index.html
api/tools/: index.html
api/ui/: index.html
assets/css/: custom.css
assets/fonts/DepartureMono/: stylesheet.css
checks/: test_playwright_not_installed.py
concepts/overview/: index.html
docs/: index copy.md  index.md
docs/api/: prompts.md  slash-commands.md  tools.md  ui.md
docs/assets/css/: custom.css
docs/concepts/: overview.md
docs/guides/: configuration.md  custom-prompts.md  getting-started.md  installation.md  quick-start.md  slash-commands.md  tools.md  ui-components.md
guides/quick-start/: index.html
search/: search_index.json
src/bespoken/: __init__.py  __main__.py  chat.py  config.py  file_completer.py  styles.py  ui.py
src/bespoken/tools/: __init__.py  file_tools.py  filesystem.py  playwright_browser.py  todo.py
tests/: __init__.py  test_file_tools.py  test_not_installed.py  test_playwright.py  test_ui_padding.py  test_webfetch.py
